Eliminated PMD error messages for by replacing calls to new Integer(int) with Integer.valueOf(int)